# picky_poll_backend

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE.txt  README.md  example-request.json
cleanup/: Cargo.toml
cleanup/src/: main.rs
data/: Cargo.toml
data/src/: lib.rs  transaction.rs
db/: Dockerfile  create.sql  poll.psql  poll_candidate.psql
service/: Cargo.toml
service/src/: main.rs  model.rs  operations.rs
service/src/db/: transaction.rs
service/src/service/: mod.rs
src/: db.rs  main.rs  model.rs  operations.rs  util.rs
src/db/: mod.rs  transaction.rs
src/paths/: mod.rs
src/service/: mod.rs  operations.rs  paths.rs
