[package]
name = "vote-backend-2"
version = "0.1.0"
authors = ["Stephen <stephenmerc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

chrono = "0.4"

rand = "0.7"

tokio = { version = "0.2", features = ["full"] }

tokio-postgres = { version = "0.6.0", features = ["with-chrono-0_4"] }

warp = "0.2"
