[package]
name = "vote-backend-2"
version = "0.1.0"
authors = ["Stephen <stephenmerc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

async-trait = "0.1.42"

chrono = "0.4"

rand = "0.7"

tokio = { version = "0.2", features = ["full"] }

sqlx = { version = "0.4.0", features = [ "runtime-tokio-rustls", "postgres", "chrono" ] }

warp = "0.2"
