[package]
name = "picky_poll_backend"
version = "0.1.0"
authors = ["Stephen <stephenmerc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3.12"
itertools = "0.10"
rand = "0.7"
serde = { version = "1.0", features = ["derive", "rc"] }
sqlx = { version = "0.4.0", features = [ "runtime-tokio-rustls", "postgres", "chrono" ] }
tokio = { version = "0.2", features = ["full"] }
mockall = "0.9"