[package]
name = "data"
version = "0.1.0"
authors = ["Stephen Mercado <stephenmerc@gmail.com>"]
edition = "2018"

[lib]
name = "data"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.4.0", features = [ "runtime-tokio-rustls", "postgres", "chrono" ] }